# CalendarBot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: config.py  db.py  db_migrations.py  main.py  models.py  scheduler.py  schemas.py  worker.py
app/services/: approvals.py  budget.py  costs.py  extraction_utils.py  extractor.py  ingest.py  integrations.py  llama_decision_schema.py  maintenance.py  ollama_adapter.py  processor.py
relay/: mac_relay.py
tests/: conftest.py  test_approvals.py  test_budget.py  test_conversation_state.py  test_ingest.py  test_integrations.py  test_llama_context_and_schema.py  test_main_api.py  test_maintenance.py  test_oauth_calendar.py  test_processor_and_budget.py  test_relay.py  test_scheduler.py  test_thread_extraction.py
